# anachat

./: Cargo.toml  README.md
src/: channel.rs  display_channel.rs  geometry.rs  main.rs  model.rs  root_view.rs  tab.rs  tabs.rs  twitch.rs
templates/: root.aml
